# InheritX

./: ALL_CI_CHECKS_PASSING.md  BACKEND_CI_READY.md  CI_CHECKS_PASSED.md  CI_TESTS_PASSING.md  FINAL_CI_STATUS.md  GETTING_STARTED_PRICE_FEEDS.md  IMPLEMENTATION_GUIDE.md  PRICE_FEED_CHECKLIST.md  PRICE_FEED_INDEX.md  PRICE_FEED_INTEGRATION.md  PRICE_FEED_QUICK_REFERENCE.md  PRICE_FEED_SUMMARY.md  PUSH_SUCCESSFUL.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: backend.yml  contracts.yml  frontend.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
app/components/: Navbar.tsx
app/svg/: ClaimIcon.tsx  HomeIcon.tsx  InactivityIcon.tsx  (+4 more)
backend/: Cargo.toml  README.md
backend/migrations/: 20260221120000_add_plans_and_logs.sql  20260225_add_price_feeds.sql
backend/src/: api_error.rs  app.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  price_feed.rs  price_feed_handlers.rs  service.rs  telemetry.rs  will_pdf.rs  will_signature.rs
backend/src/http/: admin.rs  auth.rs  health.rs  identity.rs  mod.rs  payments.rs  transfers.rs  withdrawals.rs
backend/src/middleware/: auth.rs  metrics.rs  mod.rs  request_id.rs
backend/src/service/: anchor_service.rs  audit_service.rs  bridge_service.rs  compliance_service.rs  identity_service.rs  indexer_service.rs  mod.rs  payment_service.rs
backend/tests/: admin_audit_log.rs  admin_due_plans_tests.rs  legacy_content_tests.rs  price_feed_tests.rs  token_transfer_failure.rs
components/: ConnectButton.tsx  Navbar.tsx  WalletModal.tsx  userIcon.tsx
context/: AdminAuthContext.tsx  WalletContext.tsx
contracts/: Cargo.toml
hooks/: useUpdateEffect.tsx
util/: address.ts
(+45 files in other folders)
