[package]
name = "inheritx-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["json", "multipart", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate"
] }
deadpool-postgres = "0.10"

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
ring = "0.17"

# Stellar SDK - TODO: Use correct Stellar Rust SDK
# Check: https://crates.io/crates/stellar-rust-sdk or similar
# For now, we'll comment this out until we find the right crate
# stellar-sdk = "0.1"
soroban-sdk = "21.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.21"

# Metrics & monitoring
prometheus = "0.13"
lazy_static = "1.4"
postgres-types = { version = "0.2.12", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }

# Testing
[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.7"
